--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
-    "@genkit-ai/google-genai": "^0.3.2",
+    "@genkit-ai/google-genai": "^...",
     "@genkit-ai/next": "^0.4.0",
     "@hookform/resolvers": "^4.1.3",
     "@radix-ui/react-accordion": "^1.2.3",
