--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "dotenv": "^16.5.0",
     "embla-carousel-react": "^8.6.0",
     "firebase": "^11.9.1",
+    "framer-motion": "^12.31.2",
     "lucide-react": "^0.475.0",
     "next": "^14.2.4",
     "patch-package": "^8.0.0",
