--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
     "@hookform/resolvers": "^4.1.3",
@@ -41,6 +42,7 @@
     "framer-motion": "^12.31.2",
     "lucide-react": "^0.475.0",
     "next": "^14.2.4",
+    "next-themes": "^0.4.6",
     "patch-package": "^8.0.0",
     "react": "^18.3.1",
     "react-day-picker": "^9.11.3",
@@ -54,6 +56,8 @@
     "@types/node": "^20",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "^14.2.35",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
